--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Informacion y servicios relacionados a la obtencion de la ciudadania Croata">
     <meta name="keywords" content="Croacia, Croata, partida de nacimiento, turno embajada, ciudadania europea">
     <title>Mi proyecto</title>
-    <link rel="stylesheet" href="/css/estilo.css">
+    <link rel="stylesheet" href="../Coder/css/estilo.css">
 </head>
 
 <body>
