--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
                 <li class="nav-item active">
-                    <a class="nav-link" href="/index.html">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="../Coder/index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="views/blog.html">Blog</a>
+                    <a class="nav-link" href="../Coder/views/blog.html">Blog</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="views/nosotros.html">Nosotros</a>
+                    <a class="nav-link" href="../Coder/views/nosotros.html">Nosotros</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="views/contacto.html">Contacto</a>
+                    <a class="nav-link" href="../Coder/views/contacto.html">Contacto</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
@@ -52,16 +52,16 @@
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="/assets/img1.jpg" class="d-block vw-100 vh-100" alt="pasiaje">
+                <img src="../Coder/assets/img1.jpg" class="d-block vw-100 vh-100" alt="pasiaje">
             </div>
             <div class="carousel-item">
-                <img src="/assets/img2.jpg" class="d-block vw-100 vh-100" alt="paisaje">
+                <img src="../Coder/assets/img2.jpg" class="d-block vw-100 vh-100" alt="paisaje">
             </div>
             <div class="carousel-item">
-                <img src="/assets/img3.jpg" class="d-block vw-100 vh-100" alt="paisaje">
+                <img src="../Coder/assets/img3.jpg" class="d-block vw-100 vh-100" alt="paisaje">
             </div>
             <div class="carousel-item">
-                <img src="/assets/img4.jpg" class="d-block vw-100 vh-100" alt="paisaje">
+                <img src="../Coder/assets/img4.jpg" class="d-block vw-100 vh-100" alt="paisaje">
             </div>
             <div class="carousel-item">
                 <img src="/assets/img5.jpg" class="d-block vw-100 vh-100" alt="paisaje">
