--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <img src="../Coder/assets/img4.jpg" class="d-block vw-100 vh-100" alt="paisaje">
             </div>
             <div class="carousel-item">
-                <img src="/assets/img5.jpg" class="d-block vw-100 vh-100" alt="paisaje">
+                <img src="../Coder/assets/img5.jpg" class="d-block vw-100 vh-100" alt="paisaje">
             </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
