listo para entrega final

--- a/index.html
+++ b/index.html
@@ -38,8 +38,10 @@
                         Servicios
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item dark" href="views/servicios.html#croataTable">Obtener Turno</a>
-                        <a class="dropdown-item" href="views/servicios.html#nacimientoTable">Buscar Partidas</a>
+                        <a class="dropdown-item" href="views/servicios.html#croataTable">Obtener Turno</a>
+                        <a class="dropdown-item" href="views/servicios.html#nacimientoTable">Buscar
+                            Partidas</a>
+                        <a class="dropdown-item" href="views/servicios.html#traduccionesTable">Traducciones</a>
                     </div>
                 </li>
             </ul>
