listo para entregar

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Informacion y servicios relacionados a la obtencion de la ciudadania Croata">
     <meta name="keywords" content="Croacia, Croata, partida de nacimiento, turno embajada, ciudadania europea">
-    <title>Mi proyecto</title>
+    <title>Herencia Croata</title>
     <link rel="stylesheet" href="../Coder/css/estilo.css">
 </head>
 
